--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap');
 *{
-    font-family: font-family: 'Roboto', sans-serif;;
+    font-family: 'Roboto', sans-serif;;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
